@startuml
class com.froztlass.tafsirmate.SplashFragment {
- FragmentSplashBinding? _binding
-  binding
+ View onCreateView(LayoutInflater,ViewGroup?,Bundle?)
+ void onViewCreated(View,Bundle?)
- Boolean onBoardingFinished()
+ void onDestroyView()
}


class com.froztlass.tafsirmate.adapter.SuratAdapter {
}
class com.froztlass.tafsirmate.adapter.SuratViewHolder {
}
class com.froztlass.tafsirmate.onboarding.screens.ThirdScreen {
- FragmentThirdScreenBinding? _binding
-  binding
- GoogleSignInClient googleSignInClient
- FirebaseAuth auth
-  googleSignInLauncher
+ View onCreateView(LayoutInflater,ViewGroup?,Bundle?)
- void signInWithGoogle()
- void firebaseAuthWithGoogle(String)
- void saveUserToFirestore(FirebaseUser)
+ void onDestroyView()
}


class com.froztlass.tafsirmate.onboarding.screens.FirstScreen {
+ View? onCreateView(LayoutInflater,ViewGroup?,Bundle?)
}

class com.froztlass.tafsirmate.MenuFragment {
- FragmentMenuBinding? _binding
-  binding
-  homeFragment
-  botFragment
-  profileFragment
- Fragment activeFragment
+ View onCreateView(LayoutInflater,ViewGroup?,Bundle?)
- void setupBottomNavigation()
- void showFragment(Fragment)
+ void onDestroyView()
}


class com.froztlass.tafsirmate.model.SurahResponse {
}
class com.froztlass.tafsirmate.model.ApiResponse {
}
interface com.froztlass.tafsirmate.api.EquranApiService {
+ Call<SurahResponse> getSuratList()
+ Call<ApiResponse> getSurah(Int)
}

class com.froztlass.tafsirmate.api.EquranRepository {
- EquranApiService api
+ void getSuratList((List<Surat>?) -> Unit)
+ void getSurahDetail(Int,(Surat?) -> Unit)
}


class com.froztlass.tafsirmate.model.BotViewModel$Companion {
-  CHAT_HISTORY_KEY
}

class com.froztlass.tafsirmate.model.BotViewModel {
+ MutableList<Pair<String, Boolean>> chatHistory
+ void addMessage(String,Boolean)
}


class com.froztlass.tafsirmate.BotFragment2 {
-  client
-  apiKey
-  elevenLabsApiKey
-  voiceId
- LinearLayout chatLayout
- ScrollView scrollView
- EditText inputText
- ImageButton sendButton
- ImageButton micButton
- LinearLayout inputContainer
- TextView greetingText
- TextView welcomeMessage
- SpeechRecognizer speechRecognizer
- BotViewModel viewModel
-  messageHistory
-  isUserScrolling
-  isVoiceInput
+ void onCreateView(void,LayoutInflater,ViewGroup?,void,Bundle?)
+ void null()
- void setGreetingMessage()
- String getGreetingMessage()
- void restoreChatHistory()
- void adjustInputPosition(View)
- void addMessageBubble(String,Boolean)
- void sendMessageToOpenAI(String)
- void playTextWithElevenLabs(String)
- void startSpeechRecognition()
}


class com.froztlass.tafsirmate.MainActivity {
+ void onCreate(Bundle?)
- String performHeavyOperation()
- void updateUI(String)
- void setStatusBarIconColor(Boolean)
- Boolean isLightBackground(Int)
}

class com.froztlass.tafsirmate.model.Surat {
}
class com.froztlass.tafsirmate.model.Ayat {
}
class com.froztlass.tafsirmate.onboarding.ViewPagerAdapter {
}
class com.froztlass.tafsirmate.HomeViewModel {
-  _suratList
+ LiveData<List<Surat>> suratList
-  _ayatList
+ LiveData<List<Ayat>> ayatList
+ void loadSuratList()
+ void loadAyatList(Int)
}


class com.froztlass.tafsirmate.ProfileFragment {
- FragmentProfileBinding? _binding
-  binding
- FirebaseAuth auth
- GoogleSignInClient googleSignInClient
- SharedPreferences sharedPref
+ View onCreateView(LayoutInflater,ViewGroup?,Bundle?)
+ void onViewCreated(View,Bundle?)
+ void onDestroyView()
}


class com.froztlass.tafsirmate.DetailFragment {
- Int? surahNumber
- String? surahName
- FragmentDetailBinding binding
- AyatAdapter ayatAdapter
+ void onCreateView(void,LayoutInflater,ViewGroup?,void,Bundle?)
+ void null()
+ void onViewCreated(View,Bundle?)
- void loadSurahDetail()
}


class com.froztlass.tafsirmate.adapter.AyatAdapter$AyatViewHolder {
}
class com.froztlass.tafsirmate.adapter.AyatAdapter {
-  ayatList
+ void submitList(List<Ayat>)
+ AyatViewHolder onCreateViewHolder(ViewGroup,Int)
+ void onBindViewHolder(AyatViewHolder,Int)
+ Int getItemCount()
+ void null()
}


class com.froztlass.tafsirmate.HomeFragment {
- FragmentHomeBinding? _binding
-  binding
- SuratAdapter suratAdapter
- HomeViewModel homeViewModel
- AyatAdapter ayatAdapter
- List<Surat> allSuratList
-  doubleBackToExitPressedOnce
+ View onCreateView(LayoutInflater,ViewGroup?,Bundle?)
+ void onViewCreated(View,Bundle?)
- void showSurahDetails(Surat)
- void filterSurat(String?)
- void filterSurat2(String?)
+ void onDestroyView()
}


class com.froztlass.tafsirmate.BotFragment {
-  client
-  apiKey
- LinearLayout chatLayout
- ScrollView scrollView
- EditText inputText
- ImageButton sendButton
- ImageButton micButton
- LinearLayout inputContainer
- TextView greetingText
- TextView welcomeMessage
- SpeechRecognizer speechRecognizer
- TextToSpeech textToSpeech
- BotViewModel viewModel
-  messageHistory
-  isUserScrolling
-  isVoiceInput
+ void onCreateView(void,LayoutInflater,ViewGroup?,void,Bundle?)
+ void null()
+ void onInit(Int)
- void setGreetingMessage()
- String getGreetingMessage()
- void restoreChatHistory()
- void adjustInputPosition(View)
- void addMessageBubble(String,Boolean)
- void sendMessageToOpenAI(String,Boolean)
- void startSpeechRecognition()
- void speakText(String)
- String removeMarkdown(String)
- String getTafsirAlFatihahFromJson()
}


class com.froztlass.tafsirmate.onboarding.ViewPagerFragment {
+ View? onCreateView(LayoutInflater,ViewGroup?,Bundle?)
+ void onViewCreated(View,Bundle?)
}

class com.froztlass.tafsirmate.onboarding.screens.SecondScreen {
+ View? onCreateView(LayoutInflater,ViewGroup?,Bundle?)
}



androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.SplashFragment




androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.onboarding.screens.ThirdScreen
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.onboarding.screens.FirstScreen
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.MenuFragment
com.froztlass.tafsirmate.model.BotViewModel +.. com.froztlass.tafsirmate.model.BotViewModel$Companion
androidx.lifecycle.ViewModel <|-- com.froztlass.tafsirmate.model.BotViewModel
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.BotFragment2
androidx.appcompat.app.AppCompatActivity <|-- com.froztlass.tafsirmate.MainActivity
androidx.lifecycle.ViewModel <|-- com.froztlass.tafsirmate.HomeViewModel
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.ProfileFragment
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.DetailFragment
com.froztlass.tafsirmate.adapter.AyatAdapter +.. com.froztlass.tafsirmate.adapter.AyatAdapter$AyatViewHolder
com.froztlass.tafsirmate.adapter.ViewHolder <|-- com.froztlass.tafsirmate.adapter.AyatAdapter$AyatViewHolder


com.froztlass.tafsirmate.adapter.Adapter <|-- com.froztlass.tafsirmate.adapter.AyatAdapter
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.HomeFragment
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.BotFragment
com.froztlass.tafsirmate.OnInitListener <|.. com.froztlass.tafsirmate.BotFragment
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.onboarding.ViewPagerFragment
androidx.fragment.app.Fragment <|-- com.froztlass.tafsirmate.onboarding.screens.SecondScreen
@enduml